--- a/UI/JS/forin.html
+++ b/UI/JS/forin.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>greatest</title>
-</head>
-
-<body>
+    <title>forin</title>
     <script>
-        let x = 10;
-        let y = 50;
-        if (x > y) {
-            document.write(`X is greater than y` + x);
-        } else {
-
-            document.write(`y is greater than x` +"<br>" +y);
+        var first = [10,20,30,40]
+        for (second in first){
+            document.write(first(second));
         }
     </script>
+</head>
+<body>
+    
 </body>
-
 </html>
