--- a/UI/JS/Bom.html
+++ b/UI/JS/Bom.html
@@ -1,24 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>greatest</title>
+    <title>Document</title>
 </head>
-
 <body>
     <script>
-        let x = 10;
-        let y = 50;
-        if (x > y) {
-            document.write(`X is greater than y` + x);
-        } else {
-
-            document.write(`y is greater than x` +"<br>" +y);
-        }
+        window.document.getElementById("header");
+        
     </script>
 </body>
-
 </html>
